c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/array_of_functions_2.c
// Identical to array_of_functions.c but parenthesized differently
int (foo[3])(int a);